-- end points para listar professores e para buscar sala por id